kubernetes-configs/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service

spec:
  selector:
    app: backend

  ports:
  - protocol: TCP
    port: 8082
    targetPort: 8081

  type: LoadBalancer
